--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,9 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
+    "react-bootstrap": "^1.0.0-beta.12",
+    "bootstrap": "^4.3.1",
+    "sweetalert": "^2.1.2",
     "web3": "^1.2.0"
   },
   "scripts": {
