--- a/app/package.json
+++ b/app/package.json
@@ -11,7 +11,9 @@
     "react-bootstrap": "^1.0.0-beta.12",
     "bootstrap": "^4.3.1",
     "sweetalert": "^2.1.2",
-    "web3": "^1.2.0"
+    "web3": "^1.2.0",
+    "react-spinners-kit": "^1.9.0",
+    "styled-components": "^4.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
